--- a/hoshino/modules/priconne/gacha/config.json
+++ b/hoshino/modules/priconne/gacha/config.json
@@ -83,12 +83,12 @@
         "up_prob":   7,
         "s3_prob":  25,
         "s2_prob": 180,
-        "up": [ "真琴", "真步" ],
+        "up": [ "镜华" ],
         "_comment": "star3 仅填3星常驻角色。不要填UP角，否则出率会偏高",
         "star3": [
             "杏奈","璃乃","初音","伊绪",
             "咲恋","望","妮诺","秋乃",
-            "静流","莫妮卡","吉塔", "纯"
+            "静流","莫妮卡","吉塔", "纯","真琴", "真步"
         ],
         "other_normal_star3": [
             "霞", "镜华", "智", "伊莉亚", "纯", "流夏", "亚里莎", "安", "古蕾娅","空花(大江户)", "妮诺(大江户)",
