--- a/hoshino/modules/priconne/gacha/config.json
+++ b/hoshino/modules/priconne/gacha/config.json
@@ -30,7 +30,7 @@
         "up_prob":   7,
         "s3_prob":  25,
         "s2_prob": 180,
-        "up": [ "凯留(新年)" ],
+        "up": [ "霞(魔法少女)" ],
         "_comment": "star3 仅填3星常驻角色。不要填UP角，否则出率会偏高",
         "star3": [
             "杏奈","真步","璃乃","初音","霞","伊绪",
@@ -83,12 +83,12 @@
         "up_prob":   7,
         "s3_prob":  25,
         "s2_prob": 180,
-        "up": [ "镜华" ],
+        "up": [ "伊莉亚" ],
         "_comment": "star3 仅填3星常驻角色。不要填UP角，否则出率会偏高",
         "star3": [
             "杏奈","璃乃","初音","伊绪",
             "咲恋","望","妮诺","秋乃",
-            "静流","莫妮卡","吉塔", "纯","真琴", "真步"
+            "静流","莫妮卡","吉塔", "纯","真琴", "真步","镜华"
         ],
         "other_normal_star3": [
             "霞", "镜华", "智", "伊莉亚", "纯", "流夏", "亚里莎", "安", "古蕾娅","空花(大江户)", "妮诺(大江户)",
@@ -99,7 +99,7 @@
             "茉莉","茜里","宫子","雪","铃",
             "铃奈","香织","美美","绫音","惠理子",
             "真阳","栞","千歌","空花","珠希","美冬",
-            "深月"
+            "深月","美里"
         ],
         "star1" : [
             "日和","怜","禊","胡桃","依里","铃莓",
